--- a/App/frontend/app/pubspec.yaml
+++ b/App/frontend/app/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   web_socket_channel: ">=1.0.0"
   http: ^0.12.1
   provider: ^5.0.0
+  flutter_svg: ^0.19.3
+  google_fonts: ^1.1.0
 
 
 
@@ -50,8 +52,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
