--- a/App/app/pubspec.yaml
+++ b/App/app/pubspec.yaml
@@ -23,13 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  web3dart: ^1.2.3
   web_socket_channel: ">=1.0.0"
   http: ^0.12.1
   provider: ^5.0.0
   flutter_svg: ^0.19.3
-  http: ^0.13.0
-
+  crypt: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
