--- a/App/frontend/app/pubspec.yaml
+++ b/App/frontend/app/pubspec.yaml
@@ -23,12 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  web3dart: ^1.2.3
   web_socket_channel: ">=1.0.0"
   http: ^0.12.1
   provider: ^5.0.0
   flutter_svg: ^0.19.3
   google_fonts: ^1.1.0
+  crypt: ^4.0.0
 
 
 
@@ -53,8 +53,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/icons/
-  #   - images/a_dot_ham.jpeg
+    - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
