--- a/App/frontend/app/pubspec.yaml
+++ b/App/frontend/app/pubspec.yaml
@@ -23,14 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  web3dart: ^1.2.3
   web_socket_channel: ">=1.0.0"
   http: ^0.12.1
   provider: ^5.0.0
   flutter_svg: ^0.19.3
-  google_fonts: ^1.1.0
-  crypt: ^4.0.0
-
-
+  crypt: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -52,9 +50,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/icons/
+  assets: 
     - assets/images/
+    - assets/icons/
+    - src/abis/Korisnici.json
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
