--- a/App/frontend/app/pubspec.yaml
+++ b/App/frontend/app/pubspec.yaml
@@ -54,6 +54,8 @@ flutter:
     - assets/images/
     - assets/icons/
     - src/abis/Korisnici.json
+    - src/abis/Kategorije.json
+    - src/abis/Proizvodi.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
