--- a/App/frontend/app/pubspec.yaml
+++ b/App/frontend/app/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   provider: ^5.0.0
   flutter_svg: ^0.19.3
   crypt: ^3.0.0
+  flutter_session: ^0.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
