--- a/App/frontend/app/pubspec.yaml
+++ b/App/frontend/app/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  adhara_socket_io: ^0.4.2+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
