--- a/App/frontend/app/pubspec.yaml
+++ b/App/frontend/app/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   web_socket_channel: ">=1.0.0"
   http: ^0.12.1
   provider: ^5.0.0
+  image_picker: ^0.6.7
   flutter_svg: ^0.19.3
   crypt: ^3.0.0
   flutter_session: ^0.1.1
