--- a/App/frontend/app/pubspec.yaml
+++ b/App/frontend/app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_svg: ^0.19.3
   crypt: ^3.0.0
   flutter_session: ^0.1.1
+  flutter_secure_storage: ^4.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
