Napravljeni tokeni u .Netu

--- a/App/backend/netCore/netCore/netCore.csproj
+++ b/App/backend/netCore/netCore/netCore.csproj
@@ -5,11 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="UI\**" />
+    <Content Remove="UI\**" />
+    <EmbeddedResource Remove="UI\**" />
+    <None Remove="UI\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UI\Interfaces\" />
+    <Folder Include="Repo\" />
   </ItemGroup>
 
 
