--- a/App/frontend/app/pubspec.yaml
+++ b/App/frontend/app/pubspec.yaml
@@ -59,11 +59,11 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/kategorije.json
-    - src/abis/Korisnici.json
-    - src/abis/Kategorije.json
-    - src/abis/Proizvodi.json
-    - src/abis/Ocene.json
-    - src/abis/Kupovine.json
+    - assets/src/Korisnici.json
+    - assets/src/Kategorije.json
+    - assets/src/Proizvodi.json
+    - assets/src/Ocene.json
+    - assets/src/Kupovine.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
