--- a/App/frontend/app/pubspec.yaml
+++ b/App/frontend/app/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
     - assets/src/Proizvodi.json
     - assets/src/Ocene.json
     - assets/src/Kupovine.json
+    - assets/src/ListaZelja.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
