--- a/App/frontend/app/pubspec.yaml
+++ b/App/frontend/app/pubspec.yaml
@@ -23,21 +23,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  web3dart: ^2.0.0-dev.7
+  web3dart: ">=2.0.0-dev.7"
   web_socket_channel: ">=1.0.0"
-  http: ^0.12.2
-  provider: ^5.0.0
-  image_picker: ^0.6.7
-  flutter_svg: ^0.19.3
-  crypt: ^3.0.0
-  flutter_session: ^0.1.1
-  flutter_secure_storage: ^4.1.0
+  http: ">=0.12.2"
+  provider: ">=5.0.0"
+  image_picker: ">=0.6.7"
+  flutter_svg: ">=0.19.3"
+  crypt: ">=3.0.0"
+  flutter_session: ">=0.1.1"
+  flutter_secure_storage: ">=4.1.0"
+  signalr_core: ">=1.1.1"
+  badges: ">=1.2.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ">=1.0.2"
 
-  adhara_socket_io: ^0.4.2+1
+  adhara_socket_io: ">=0.4.2+1"
 
 dev_dependencies:
   flutter_test:
