Popravljena baza, i doradjen hub za poruke

--- a/App/backend/netCore/netCore/netCore.csproj
+++ b/App/backend/netCore/netCore/netCore.csproj
@@ -6,9 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Repo\**" />
     <Compile Remove="UI\**" />
+    <Content Remove="Repo\**" />
     <Content Remove="UI\**" />
+    <EmbeddedResource Remove="Repo\**" />
     <EmbeddedResource Remove="UI\**" />
+    <None Remove="Repo\**" />
     <None Remove="UI\**" />
   </ItemGroup>
 
@@ -16,10 +20,6 @@
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Repo\" />
   </ItemGroup>
 
 
