--- a/App/backend/node/package.json
+++ b/App/backend/node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node",
+  "name": "back",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,14 +9,7 @@
   "author": "ChainTech",
   "license": "ISC",
   "dependencies": {
-    "ipfs-api": "^26.1.2",
-    "multer": "^1.4.2",
-    "body-parser": "^1.16.0",
-    "cors": "^2.8.1",
-    "cuid": "^1.3.8",
-    "express": "^4.14.1",
-    "express-jwt": "^5.1.0",
-    "jsonwebtoken": "^7.2.1",
-    "web3": "^0.18.2"
+    "express": "^4.17.1",
+    "ipfs-api": "^26.1.2"
   }
 }
