--- a/App/frontend/app/pubspec.yaml
+++ b/App/frontend/app/pubspec.yaml
@@ -37,9 +37,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ">=1.0.2"
-
-  adhara_socket_io: ">=0.4.2+1"
-
+  file_picker: ">=2.9.0"
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
