--- a/App/frontend/mobApp/pubspec.yaml
+++ b/App/frontend/mobApp/pubspec.yaml
@@ -34,11 +34,13 @@ dependencies:
   flutter_secure_storage: ">=4.1.0"
   signalr_core: ">=1.1.1"
   flutter_swiper: ^1.1.6
+  multi_image_picker: ^4.8.1
+  flutter_absolute_path: ^1.0.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ">=1.0.2"
-  file_picker: ">=2.9.0"
- 
+  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
