Izmenjen model proizvoda sada sadrzi sve potrebne stvari, dodata f-ja za izlistavanje po kategoriji, dodata f-ja za skidanje sa stanja(nije zavrseno), DARKO dodao f-ju za izlistavanje najprodavanijh proizvoda

--- a/App/frontend/webApp/pubspec.yaml
+++ b/App/frontend/webApp/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/src/Ocene.json
     - assets/src/Kupovine.json
     - assets/src/ListaZelja.json
+    - src/abis/Proizvodi.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
