--- a/App/frontend/webApp/pubspec.yaml
+++ b/App/frontend/webApp/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ">=1.0.2"
   file_picker: ">=2.9.0"
- 
+  intl: ">=0.17.0"
 dev_dependencies:
   flutter_test:
     sdk: flutter
